<resources>
    <string name="app_name">Выбери собаку</string>
    <string-array name="dogs_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="mainstates">
        <item>Рекомендация :)</item>
        <item>Внимание!</item>
        <item>Скрыть</item>
        <item>Удачного выбора!</item>
        <item>Спасибо за понимание!</item>
    </string-array>
    <string-array name="aboutsizesintable">
        <item>Чаще всего питомца маленького размера заводят по простой причине — он не требует много места. Дома ему понадобится лежанка, хотя скорее всего малыш будет проводить время на диване рядом с хозяином. Любимца легко взять с собой в путешествие или гости, разместив в пути у себя на коленях.</item>
        <item>Данная разновидность собак очень хорошо подойдет каждому человеку, ведь породы включенные в эту разновидность не достигают больших размеров в росте, не требуют к себе особенного ухода, только любовь и ласка. Но несмотря на их маленький рост они очень умны и дружелюбны к людям.</item>
        <item>Собаки среднего размера универсальны, их можно содержать в небольшой городской квартире, частном доме, многие породы отлично будут себя чувствовать на улице в вольере и будке. При принятии решения завести четвероногого друга, необходимо определиться, кто необходим семье: питомец, который будет радовать своим присутствием, охранник и защитник дома и ребёнка или рабочая собака, которая будет сопровождать хозяина на охоте.</item>
        <item>Заводя питомца крупной породы, необходимо обеспечить ему условия комфортного проживания. Обладателям загородного дома можно приобрести любую породу, которые будут плохо себя чувствовать в условиях городской квартиры и создадут массу неудобств при взрослении. Для квартирного содержания подойдёт не каждая собака и перед выбором нужно проанализировать свои возможности и особенности содержания породы.</item>
        <item>В данной таблице представлены приблизительные значения и размеры разных пород собак. Для достоверной информации необходима консультация специалиста.</item>
    </string-array>
    <string-array name="two2">
        <item>Фильтры и поиск</item>
        <item>Закрыть</item>
    </string-array>
    <string-array name="mainarray">
        <item>С уважением от разработчика!</item>
    </string-array>
    <string-array name="dogs_names">
        <item>Австралийская овчарка</item>
        <item>Акита-Ину</item>
        <item>Американский стаффордширский терьер</item>
        <item>Английский бульдог</item>
        <item>Бассет-Хаун</item>
        <item>Бернский зенненхунд</item>
        <item>Бигль</item>
        <item>Вельш-корги</item>
        <item>Восточноевропейская овчарка</item>
        <item>Гаванский бишон</item>
        <item>Далматин</item>
        <item>Доберман</item>
        <item>Западносибирская лайка</item>
        <item>Золотистый ретривер</item>
        <item>Ирландский волкодав</item>
        <item>Испанский мастиф</item>
        <item>Йоркширский терьер</item>
        <item>Кавказская овчарка</item>
        <item>Кане-корсо</item>
        <item>Китайская хохлатая</item>
        <item>Комондор</item>
        <item>Лабрадор-ретривер</item>
        <item>Леонбергер</item>
        <item>Мальтийская болонка</item>
        <item>Мопс</item>
        <item>Немецкая овчарка</item>
        <item>Немецкий боксер</item>
        <item>Немецкий дог</item>
        <item>Ньюфаундленд</item>
        <item>Пекинес</item>
        <item>Померанский шпиц</item>
        <item>Пудель</item>
        <item>Ризеншнауцер</item>
        <item>Ротвейлер</item>
        <item>Русская псовая борзая</item>
        <item>Русский той</item>
        <item>Самоед</item>
        <item>Сенбернар</item>
        <item>Такса</item>
        <item>Тибетский мастиф</item>
        <item>Уиппет</item>
        <item>Фараонова собака</item>
        <item>Французский бульдог</item>
        <item>Ховаварт</item>
        <item>Цвергшнауцер</item>
        <item>Чау-чау</item>
        <item>Черный терьер</item>
        <item>Чихуахуа</item>
        <item>Шарпей</item>
        <item>Ши-тцу</item>
        <item>Эрдельтерьер</item>
        <item>Южнорусская овчарка</item>
        <item>Японский хин</item>
        <item>Японский шпиц</item>
    </string-array>
    <string-array name="dogs_secondnames">
        <item>( Аусси )</item>
        <item>( Японская акита )</item>
        <item>( АСТ, Амстафф, Стаффордширский терьер)</item>
        <item>( Бульдог, Британский бульдог)</item>
        <item>( Бассет )</item>
        <item>( Бернская овчарка, Берн )</item>
        <item>( Бигль Харьер )</item>
        <item>( Пемброк, Корги, Кардиган )</item>
        <item>( ВЕО, Восточник)</item>
        <item>( Хаванез )</item>
        <item>( Далматинец )</item>
        <item>( Доберман-пинчер )</item>
        <item>( ЗСЛ, Лайка)</item>
        <item>( Голден-ретривер )</item>
        <item>( Дирхаунд )</item>
        <item>( Молосс )</item>
        <item>( Йорк, Шотландский терьер)</item>
        <item>( Кавказец, Кавказская горная собака, Кавказкий волкодав)</item>
        <item>( Итальянский Кане-корсо, Итальянский мастиф )</item>
        <item>( КХЛ, Голая китайская хохлатая)</item>
        <item>( Венгерская овчарка )</item>
        <item>( Лабрадор )</item>
        <item>( Леонберг )</item>
        <item>( Мальтезе, Болонка )</item>
        <item>( Кагнолино )</item>
        <item>( Эльзасская овчарка )</item>
        <item>( Боксер )</item>
        <item>( Немецкий мастиф, Дог )</item>
        <item>( Водолаз, Ньюф )</item>
        <item>( Китайский спаниель, Пекинская дворцовая собака )</item>
        <item>( Померанец, Немецкий померанский шпиц, Цвергшпиц, Карликовый шпиц )</item>
        <item>( Каниш )</item>
        <item>( Гигантский шнауцер )</item>
        <item>( Собака мясника,Ротвейлер-метцгерхунд )</item>
        <item>( Русская псовая борзая )</item>
        <item>( Русский той, Той-терьер )</item>
        <item>( Самоедская лайка, Арктический шпиц )</item>
        <item>( Бернар )</item>
        <item>( Кроличья )</item>
        <item>( Ландрас, Гималайская горная )</item>
        <item>( Малая английская борзая )</item>
        <item>( Кельб таль-фенек, Фарао хаунд )</item>
        <item>( Френч бульдог )</item>
        <item>( Хофварт )</item>
        <item>( Цверго, Миниатюрный шнауцер, Карликовый шнауцер, Жесткошёрстный пинчер )</item>
        <item>( Лохматый лев )</item>
        <item>( РЧТ, Собака Сталина, Русский черный терьер, Черныш )</item>
        <item>( Чиуауа )</item>
        <item>( Китайский шарпей, Песчаная собака)</item>
        <item>( Собака-лев, Собачка-хризантема )</item>
        <item>( Эрдель )</item>
        <item>( ЮРО, Южак )</item>
        <item>( Хин, Японский спаниель )</item>
        <item>( Азиатский шпиц, Белоснежка )</item>
    </string-array>
    <string name="first_desc">Придерживая собаку в положении стоя измерьте длину от основания хвостика до холки.</string>
    <string name="second_desc">Измеряется в самой широкой части груди сразу за передними лапками. Прибавьте 2 сантиметра.</string>
    <string name="third_desc">Измеряем в самой широкой части шеи. Прибавьте 2 сантиметра, чтобы одежда не натирала.</string>
    <string name="editor3">Используются навыки приобретенные при обучении в IT School Samsung</string>
    <string name="editor2">Учитель (Руководство) – Павел Фридрихович </string>
    <string name="editor1">Разработчик – Долматов Максим </string>
    <string name="backtotabletext">Вернуться к таблице</string>
    <string name="first">1. Длина спинки.</string>
    <string name="second">2. Обхват груди.</string>
    <string name="third">3. Объем шеи.</string>
    <string name="aboutthis">О приложении</string>
    <string name="forall">Для каждого</string>
    <string name="version">v 1.0.0</string>
    <string name="start">Начать!</string>
    <string name="unshow">Скрыть</string>
    <string name="dog">Собака</string>
    <string name="exit">Выход</string>
</resources>