<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customactivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/dog"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="330dp"

        android:src="@drawable/mainphoto1"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/forall"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.widget.Button
            android:id="@+id/btnfrommaintotwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custombtnsearch"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="#3C3C3C"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btnaboutall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custombtnsearch"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/aboutthis"
            android:textAllCaps="false"
            android:textColor="#3C3C3C"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <android.widget.Button
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custombtnsearch"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="#3C3C3C"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/grayforversion"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>