<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customactivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/customvideofon">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/videodescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="18dp"

                />
        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/customvideofon"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/first"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/first_desc"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/customvideofon"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/second"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/second_desc"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/customvideofon"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/third"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/third_desc"
            android:textSize="18sp" />

    </LinearLayout>
        <android.widget.Button
            android:id="@+id/btnfromvideototable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/customvideofon"
            android:textSize="20sp"
            android:text="@string/backtotabletext"
            android:textAllCaps="false"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>