<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/img"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/editor1"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor2"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/editor3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/abBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/customsearchview"
            android:padding="10dp"
            android:text="@string/unshow" />
    </LinearLayout>
</LinearLayout>